# rustpyppr

./: .gitignore  Cargo.toml  rustpyppr.pyi
examples/: simple.py
src/: lib.rs
